// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip content renders correctly for pivot table data bar tooltip renders as expected 1`] = `
"<div>
        <div><strong>Customer Region:</strong> MidWest</div>
        <div><strong>Customer Name:</strong> Everdata</div>
        <div><strong>Total Online Sales:</strong> $277,579.00</div>
      </div>"
`;

exports[`tooltip content renders correctly for pivot table data bubble tooltip renders as expected 1`] = `
"<div>
        <div><strong>Customer Region:</strong> MidWest</div>
        <div><strong>Customer Name:</strong> Americom</div>
        <div><strong>Total Online Sales:</strong> $0.00</div>
      </div>"
`;

exports[`tooltip content renders correctly for pivot table data column tooltip renders as expected 1`] = `
"<div>
        <div><strong>Customer Region:</strong> MidWest</div>
        <div><strong>Customer Name:</strong> Everdata</div>
        <div><strong>Total Online Sales:</strong> $277,579.00</div>
      </div>"
`;

exports[`tooltip content renders correctly for pivot table data heatmap tooltip renders as expected 1`] = `
"<div>
        <div><strong>Customer Region:</strong> MidWest</div>
        <div><strong>Customer Name:</strong> Americom</div>
        <div><strong>Total Online Sales:</strong> $0.00</div>
      </div>"
`;

exports[`tooltip content renders correctly for pivot table data line tooltip renders as expected 1`] = `
"<div>
        <div><strong>Customer Region:</strong> South</div>
        <div><strong>Customer Name:</strong> Americom</div>
        <div><strong>Total Online Sales:</strong> $168,002.00</div>
      </div>"
`;

exports[`tooltip content renders correctly for pivot table data stacked bar tooltip renders as expected 1`] = `
"<div>
        <div><strong>Customer Region:</strong> South</div>
        <div><strong>Customer Name:</strong> Americom</div>
        <div><strong>Total Online Sales:</strong> $168,002.00</div>
      </div>"
`;

exports[`tooltip content renders correctly for pivot table data stacked column tooltip renders as expected 1`] = `
"<div>
        <div><strong>Customer Region:</strong> South</div>
        <div><strong>Customer Name:</strong> Americom</div>
        <div><strong>Total Online Sales:</strong> $168,002.00</div>
      </div>"
`;

exports[`tooltip content renders correctly for pivot table data stacked line tooltip renders as expected 1`] = `
"<div>
        <div><strong>Customer Region:</strong> South</div>
        <div><strong>Customer Name:</strong> Americom</div>
        <div><strong>Total Online Sales:</strong> $168,002.00</div>
      </div>"
`;
